--- a/index.html
+++ b/index.html
@@ -2,22 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Photo Collage</title>
+  <title>Photo Collage with Zoom</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="collage">
     <div class="frame">
-      <img id="photo1" src="https://via.placeholder.com/300x300?text=Photo+1" alt="Photo 1">
-      <button class="upload-btn" onclick="uploadImage('photo1')">Change Photo 1</button>
+      <div class="image-container">
+        <img id="photo1" src="https://via.placeholder.com/300x300?text=Photo+1" alt="Photo 1">
+      </div>
+      <div class="button-group">
+        <button class="upload-btn" onclick="uploadImage('photo1')">Change Photo 1</button>
+        <button class="zoom-btn" onclick="zoom('photo1', 0.1)">&#128269;+</button>
+        <button class="zoom-btn" onclick="zoom('photo1', -0.1)">&#128269;-</button>
+      </div>
     </div>
+
     <div class="frame">
-      <img id="photo2" src="https://via.placeholder.com/300x300?text=Photo+2" alt="Photo 2">
-      <button class="upload-btn" onclick="uploadImage('photo2')">Change Photo 2</button>
+      <div class="image-container">
+        <img id="photo2" src="https://via.placeholder.com/300x300?text=Photo+2" alt="Photo 2">
+      </div>
+      <div class="button-group">
+        <button class="upload-btn" onclick="uploadImage('photo2')">Change Photo 2</button>
+        <button class="zoom-btn" onclick="zoom('photo2', 0.1)">&#128269;+</button>
+        <button class="zoom-btn" onclick="zoom('photo2', -0.1)">&#128269;-</button>
+      </div>
     </div>
   </div>
 
-  <!-- Hidden input -->
   <input type="file" id="fileInput" accept="image/*" style="display: none;">
 
   <script src="script.js"></script>
