--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       </div>
       <div class="button-group">
         <button class="upload-btn" onclick="uploadImage('photo1')">Change Photo 1</button>
-        <button class="zoom-btn" onclick="zoom('photo1', 0.1)">&#128269;+</button>
-        <button class="zoom-btn" onclick="zoom('photo1', -0.1)">&#128269;-</button>
+        <button class="zoom-btn" onclick="zoomIn('photo1')">🔍 +</button>
+        <button class="zoom-btn" onclick="zoomOut('photo1')">🔍 -</button>
       </div>
     </div>
 
@@ -24,8 +24,8 @@
       </div>
       <div class="button-group">
         <button class="upload-btn" onclick="uploadImage('photo2')">Change Photo 2</button>
-        <button class="zoom-btn" onclick="zoom('photo2', 0.1)">&#128269;+</button>
-        <button class="zoom-btn" onclick="zoom('photo2', -0.1)">&#128269;-</button>
+        <button class="zoom-btn" onclick="zoomIn('photo2')">🔍 +</button>
+        <button class="zoom-btn" onclick="zoomOut('photo2')">🔍 -</button>
       </div>
     </div>
   </div>
