--- a/index.html
+++ b/index.html
@@ -2,35 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Photo Collage with Zoom</title>
+  <title>Photo Collage Zoom</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="collage">
     <div class="frame">
       <div class="image-container">
-        <img id="photo1" src="https://via.placeholder.com/300x300?text=Photo+1" alt="Photo 1">
+        <img id="photo1" src="https://via.placeholder.com/600x600?text=Photo+1" alt="Photo 1">
       </div>
       <div class="button-group">
-        <button class="upload-btn" onclick="uploadImage('photo1')">Change Photo 1</button>
-        <button class="zoom-btn" onclick="zoomIn('photo1')">🔍 +</button>
-        <button class="zoom-btn" onclick="zoomOut('photo1')">🔍 -</button>
+        <button onclick="uploadImage('photo1')">Change Photo 1</button>
+        <button onclick="zoom('photo1', 1.2)">🔍+</button>
+        <button onclick="zoom('photo1', 0.8)">🔍-</button>
       </div>
     </div>
 
     <div class="frame">
       <div class="image-container">
-        <img id="photo2" src="https://via.placeholder.com/300x300?text=Photo+2" alt="Photo 2">
+        <img id="photo2" src="https://via.placeholder.com/600x600?text=Photo+2" alt="Photo 2">
       </div>
       <div class="button-group">
-        <button class="upload-btn" onclick="uploadImage('photo2')">Change Photo 2</button>
-        <button class="zoom-btn" onclick="zoomIn('photo2')">🔍 +</button>
-        <button class="zoom-btn" onclick="zoomOut('photo2')">🔍 -</button>
+        <button onclick="uploadImage('photo2')">Change Photo 2</button>
+        <button onclick="zoom('photo2', 1.2)">🔍+</button>
+        <button onclick="zoom('photo2', 0.8)">🔍-</button>
       </div>
     </div>
   </div>
 
-  <input type="file" id="fileInput" accept="image/*" style="display: none;">
+  <input type="file" id="fileInput" accept="image/*" style="display:none;">
 
   <script src="script.js"></script>
 </body>
